changed font family

--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Roboto:wght@100;300;400&display=swap"
+      rel="stylesheet"
+    />
+
     %svelte.head%
   </head>
 
