changed front style - change decoration font style - updated fonts to fit new style - updated logo

--- a/src/app.html
+++ b/src/app.html
@@ -11,13 +11,13 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap"
-      rel="stylesheet"
-    />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Roboto:wght@100;300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Shadows+Into+Light+Two&display=swap"
       rel="stylesheet"
     />
 
